compiler/testData/diagnostics/tests/inline/localFun.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
fun main() {
    <!NOT_YET_SUPPORTED_LOCAL_INLINE_FUNCTION!>inline<!> fun a(){
    }
}

/* GENERATED_FIR_TAGS: functionDeclaration, inline, localFunction */
